[+] 补充朋友圈接口.
